Deploys frontend to Kubernetes.

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,8 +1,8 @@
 .RECIPEPREFIX = >
-IMAGE_NAME = github.com/efuquen/speech2text/frontend
+IMAGE_NAME = efuquen/speech2text-frontend
 
 build:
 > docker build -t ${IMAGE_NAME} .
 
 push: build
-> echo "Pushing to repo TBD"
+> docker push ${IMAGE_NAME}:latest
