--- a/lambdas/speech2text/Dockerfile
+++ b/lambdas/speech2text/Dockerfile
@@ -1,8 +1,14 @@
-FROM golang:latest
-RUN mkdir /app
-WORKDIR /app
-ADD . /app/
-RUN go get "github.com/aws/aws-lambda-go/lambda"
-RUN go build -o run .
-EXPOSE 1323
-CMD ["/app/run"]
+FROM public.ecr.aws/lambda/provided:al2 as build
+# install compiler
+RUN yum install -y golang
+RUN go env -w GOPROXY=direct
+# cache dependencies
+ADD go.mod go.sum ./
+RUN go mod download
+# build
+ADD . .
+RUN go build -o /main
+# copy artifacts to a clean image
+FROM public.ecr.aws/lambda/provided:al2
+COPY --from=build /main /main
+ENTRYPOINT [ "/main" ]  
